# fisher

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
engine/src/game/: board.rs  mod.rs
src/: lib.rs  main.rs  tables.rs
src/engine/: mod.rs  utility.rs
src/engine/move_gen/: generator.rs  king.rs  knight.rs  mod.rs  move_tables.rs  pawns.rs  rook.rs  slides.rs  sliding.rs
src/engine/move_gen/attacks/: bishop.rs  king.rs  knight.rs  queen.rs  rook.rs
src/engine/move_gen/attacks/pawn/: black.rs  white.rs
src/engine/move_gen/regular/: bishop.rs  king.rs  knight.rs  queen.rs  rook.rs
src/engine/move_gen/regular/pawn/: black.rs  mod.rs  white.rs
src/engine/move_gen/sliding_pieces/: bishop.rs  mod.rs  queen.rs  rook.rs
src/game/: board.rs  fen.rs  mod.rs  ui.rs
src/generators/: attacks.rs  mod.rs  move_tables.rs  moves.rs  slides.rs
ui/: Cargo.toml
ui/src/: main.rs
