[profile.release]
lto = true

[package]
name = "fisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
array-const-fn-init = "0.1.1"
serde = { version = "1.0.136", features = ["derive"] }
serde-big-array = "0.4.1"
serde_json = "1.0.79"
