[profile.test]
opt-level = 2

[profile.bench]
opt-level = 3
lto = "thin"

[package]
name = "fisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-const-fn-init = "0.1.1"
yansi = "0.5.1"
rayon = "1.5.3"
